--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <script type=text/javascript src=/eel.js></script>
+    <script src='/eel.js'></script>
   </head>
   <body>
     <noscript>
